--- a/index.html
+++ b/index.html
@@ -52,14 +52,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <div class="col-md-4 col-sm-9 col-12">
-                        <div class="box">4.1</div>
-                    </div>
-                    <div class="col-sm-3 col-12 d-md-none d-block">
-                        <div class="box green">3</div>
-                    </div>
-                    <div class="col-md-8 col-12 col-sm-12">
-                        <div class="box">4.2</div>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-9">
+                            <div class="box">4.1</div>
+                        </div>
+                        <div class="col-sm-3 d-md-none">
+                            <div class="box green">3</div>
+                        </div>
+                        <div class="col-md-8 col-sm-12">
+                            <div class="box">4.2</div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3 d-md-block d-none">
@@ -83,7 +85,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="box">6.1</div>
+                    <div class="box">6
+                    </div>
                 </div>
             </div>
         </div>
